<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="substrate, editIcon, editCancel, editLabel, editPostContent" />

    <View
        android:id="@+id/substrate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editLabel" />

    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/editMargin"
        android:layout_marginBottom="@dimen/editMargin"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/editCancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/editMargin"
        android:layout_marginBottom="@dimen/editMargin"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_cancel_edit_24"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/editLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/betweenIcons"
        android:text="@string/edit_message"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editPostContent"
        app:layout_constraintStart_toEndOf="@id/editIcon"
        app:layout_constraintTop_toTopOf="@id/editIcon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/editPostContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/betweenIcons"
        android:ellipsize="end"
        android:maxLines="1"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/editIcon"
        app:layout_constraintEnd_toStartOf="@id/editCancel"
        app:layout_constraintStart_toEndOf="@id/editIcon"
        app:layout_constraintTop_toBottomOf="@id/editLabel" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,add" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_save"
        android:src="@drawable/ic_save_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>